# riffology

./: .env.example  .gitignore  README.md
mesa_service/: README.md  pyproject.toml
mesa_service/src/mesa_service/: __init__.py  app.py  bundle.py  canonical_v2.py  contracts.py  gate2_contracts.py  gate2_project_evidence.py  gate3_activation.py  gate3_bundle.py  gate3_contracts.py  gate3_verify_run.py  run_baseline.py  service.py  verify_bundle.py  verify_run.py  wind_contracts.py  wind_worker.py  worker.py  workspace_lifecycle.py
mesa_service/src/mesa_service/model_assets/wind_turbine_maintenance/: metric-schema.json  model-spec.json  parameter-schema.json  provenance.json  traceability.json  visualization.json
mesa_service/src/mesa_service/model_assets/wind_turbine_maintenance/defaults/: source-field-service-reference.json  wind-turbine-maintenance-demo-v1.json
mesa_service/src/mesa_service/model_assets/wind_turbine_maintenance/tests/: microcase.json  (+1 more)
mesa_service/src/mesa_service/model_assets/wind_turbine_maintenance_framed/: execution-field-schema.json  model-spec.json  parameter-schema.json
mesa_service/src/mesa_service/models/: __init__.py  queue_network.py
mesa_service/src/mesa_service/models/wind_turbine_maintenance/: __init__.py  framed_model.py  model.py
mesa_service/tests/: test_api.py  test_contracts.py  test_gate2_v2.py  test_gate3_activation_root.py  test_gate3_framed.py  test_wind_api.py  test_wind_baseline.py  test_wind_contracts.py  test_wind_model.py  test_workspace_lifecycle.py
mesa_service/tests/goldens/: gate3-bundle-goldens.json
(+150 files in other folders)
