[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "riff-demo-mesa-service"
version = "0.1.0"
description = "Local Mesa execution service for the Riff demo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "mesa[rec]>=3,<4",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/mesa_service"]
